tests/pipeline/pipelines-ui/overlays/istio/test_data/expected/default_networking.istio.io_v1alpha3_virtualservice_ml-pipeline-tensorboard-ui.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ml-pipeline-tensorboard-ui
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /data
    rewrite:
      uri: /data
    route:
    - destination:
        host: ml-pipeline-tensorboard-ui.kubeflow.svc.cluster.local
        port:
          number: 80
    timeout: 300s
