tests/pipeline/pipelines-ui/overlays/istio/test_data/expected/kubeflow_apps_v1_deployment_ml-pipeline-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ml-pipeline-ui
  name: ml-pipeline-ui
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: ml-pipeline-ui
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: ml-pipeline-ui
    spec:
      containers:
      - image: gcr.io/ml-pipeline/frontend:0.2.0
        imagePullPolicy: IfNotPresent
        name: ml-pipeline-ui
        ports:
        - containerPort: 3000
      serviceAccountName: ml-pipeline-ui
