tests/pipeline/pipelines-ui/overlays/istio/test_data/expected/kubeflow_~g_v1_configmap_ui-parameters-hb792fcf5d.yaml
apiVersion: v1
data:
  uiClusterDomain: cluster.local
kind: ConfigMap
metadata:
  name: ui-parameters-hb792fcf5d
  namespace: kubeflow
